--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -1,80 +1,65 @@
 ---
-title: "Quickstart"
-description: "Start building awesome documentation in minutes"
+title: Quickstart
+description: Get your API key and make your first request in 5 minutes
 ---
 
-## Get started in three steps
+<Snippet file="api-base-url.mdx" />
 
-Get your documentation site running locally and make your first customization.
+## 1. Create an Account
 
-### Step 1: Set up your local environment
+Sign up at [platform.tryland.eu](https://platform.tryland.eu) to create your organization and project.
 
-<AccordionGroup>
-  <Accordion icon="copy" title="Clone your docs locally">
-    During the onboarding process, you created a GitHub repository with your docs content if you didn't already have one. You can find a link to this repository in your [dashboard](https://dashboard.mintlify.com).
-    
-    To clone the repository locally so that you can make and preview changes to your docs, follow the [Cloning a repository](https://docs.github.com/en/repositories/creating-and-managing-repositories/cloning-a-repository) guide in the GitHub docs.
-  </Accordion>
-  <Accordion icon="rectangle-terminal" title="Start the preview server">
-    1. Install the Mintlify CLI: `npm i -g mint`
-    2. Navigate to your docs directory and run: `mint dev`
-    3. Open `http://localhost:3000` to see your docs live!
-    
-    <Tip>Your preview updates automatically as you edit files.</Tip>
-  </Accordion>
-</AccordionGroup>
+## 2. Get Your API Key
 
-### Step 2: Deploy your changes
+Navigate to the **API Keys** section in your project dashboard and create a new key. Your key will look like `lp_xxx_yyy`.
 
-<AccordionGroup>
-  <Accordion icon="github" title="Install our GitHub app">
-    Install the Mintlify GitHub app from your [dashboard](https://dashboard.mintlify.com/settings/organization/github-app).
-    
-    Our GitHub app automatically deploys your changes to your docs site, so you don't need to manage deployments yourself.
-</Accordion>
-<Accordion icon="palette" title="Update your site name and colors">
-    For a first change, let's update the name and colors of your docs site.
+## 3. Make Your First Request
 
-    1. Open `docs.json` in your editor.
-    2. Change the `"name"` field to your project name.
-    3. Update the `"colors"` to match your brand.
-    4. Save and see your changes instantly at `http://localhost:3000`.
+Fetch the list of available lending markets:
 
-    <Tip>Try changing the primary color to see an immediate difference!</Tip>
-  </Accordion>
-</AccordionGroup>
+```bash
+curl -s https://api2.tryland.eu/markets?chain=solana&protocol=kamino \
+  -H "Authorization: Bearer lp_xxx_yyy" | jq .
+```
 
-### Step 3: Go live
+You should see a paginated response with market data including supply/borrow rates, utilization, and risk parameters.
 
-<Accordion icon="rocket" title="Publish your docs">
-  1. Commit and push your changes.
-  2. Your docs will update and be live in moments!
-</Accordion>
+## 4. Install the SDK
 
-## Next steps
+For TypeScript/JavaScript projects, install the official SDK:
 
-Now that you have your docs running, explore these key features:
+```bash
+npm install @trylandeu/land-sdk
+```
+
+Then use it in your code:
+
+```typescript
+import { createLandBackendClient } from "@trylandeu/land-sdk";
+
+const land = createLandBackendClient({
+  baseUrl: "https://api2.tryland.eu",
+  apiKey: "lp_xxx_yyy",
+});
+
+const markets = await land.listMarkets({
+  chain: "solana",
+  protocol: "kamino",
+});
+
+console.log(`Found ${markets.total} markets`);
+for (const market of markets.items) {
+  console.log(`${market.underlying_token.symbol}: ${(market.utilization! * 100).toFixed(1)}% utilization`);
+}
+```
+
+## Next Steps
 
 <CardGroup cols={2}>
-
-<Card title="Write Content" icon="pen-to-square" href="/essentials/markdown">
-  Learn MDX syntax and start writing your documentation.
-</Card>
-
-<Card title="Customize style" icon="palette" href="/essentials/settings">
-  Make your docs match your brand perfectly.
-</Card>
-
-<Card title="Add code examples" icon="square-code" href="/essentials/code">
-  Include syntax-highlighted code blocks.
-</Card>
-
-<Card title="API documentation" icon="code" href="/api-reference/introduction">
-  Auto-generate API docs from OpenAPI specs.
-</Card>
-
+  <Card title="Authentication" icon="key" href="/authentication">
+    Learn about API keys, rate limits, and security.
+  </Card>
+  <Card title="Data Model" icon="diagram-project" href="/concepts/data-model">
+    Understand the core entities: wallets, obligations, positions, and markets.
+  </Card>
 </CardGroup>
-
-<Note>
-  **Need help?** See our [full documentation](https://mintlify.com/docs) or join our [community](https://mintlify.com/community).
-</Note>
