--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -39,6 +39,32 @@ Paginated responses include:
 }
 ```
 
+## Sorting
+
+List endpoints accept `sort` and `order` query parameters to control result ordering:
+
+| Parameter | Type | Default | Description |
+| --- | --- | --- | --- |
+| `sort` | string | `as_of` | Field to sort by (endpoint-specific) |
+| `order` | string | `desc` | Sort direction: `asc` or `desc` |
+
+Each endpoint supports a specific set of sortable fields:
+
+| Endpoint | Sortable Fields |
+| --- | --- |
+| `/wallets/{chain}/{address}/obligations` | `total_collateral_value_usd`, `total_borrow_value_usd`, `as_of` |
+| `/wallets/{chain}/{address}/positions` | `current_value_usd`, `current_amount`, `as_of` |
+| `/markets` | `symbol`, `price_usd`, `current_supply_rate`, `current_borrow_rate_variable`, `available_amount`, `borrowed_amount`, `as_of` |
+| `/tokens` | `symbol`, `as_of` |
+| `/prices` | `price_usd`, `as_of` |
+| `/history/events` | `occurred_at` |
+| `/history/prices` | `price_usd`, `as_of` |
+| `/history/rates` | `as_of` |
+| `/history/obligations/{id}` | `as_of` |
+| `/history/positions/{id}` | `as_of` |
+
+Passing an invalid `sort` field returns a `400` error with the list of valid fields for that endpoint.
+
 ## Error Format
 
 All errors return a JSON body with `code` and `message`:
@@ -55,6 +81,8 @@ All errors return a JSON body with `code` and `message`:
 | Code | HTTP Status | Description |
 | --- | --- | --- |
 | `BAD_REQUEST` | 400 | Invalid parameters or missing required fields |
+| `INVALID_SORT_FIELD` | 400 | Unknown sort field — response includes valid options |
+| `INVALID_SORT_ORDER` | 400 | Invalid sort order — must be `asc` or `desc` |
 | `UNAUTHORIZED` | 401 | Invalid or missing API key |
 | `NOT_FOUND` | 404 | Resource does not exist |
 | `INDEXER_LAGGING` | 503 | Indexer is behind — data may be stale |
